--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ addons:
       name: "mapnik/mapnik"
       description: "Build submitted via Travis CI"
     notification_email: dane@mapbox.com
-    build_command_prepend: "cov-configure --template --compiler $CC --comptype clangcc"
+    build_command_prepend: "cov-configure --template --compiler clang --comptype clangcc"
     build_command:   "python scons/scons.py -j1"
     branch_pattern: coverity_scan
 
