--- a/.travis.yml
+++ b/.travis.yml
@@ -43,8 +43,8 @@ before_script:
 
 script:
  - wget https://github.com/mapnik/mapnik/archive/v3.0.0-rc1.tar.gz
- - tar xf mapnik-3.0.0-rc1.tar.gz
- - cd mapnik-3.0.0-rc1
+ - tar xf v3.0.0-rc1.tar.gz
+ - cd mapnik-3.0.0-rc1/
  - ./configure CXX="${CXX}" CC="${CC}" CUSTOM_CXXFLAGS="${CUSTOM_CXXFLAGS}" CUSTOM_LDFLAGS="${CUSTOM_LDFLAGS}" XML_PARSER="${XML_PARSER}" ENABLE_LOG="${ENABLE_LOG}" DEBUG="${DEBUG}" DEMO="${DEMO}" BENCHMARK="${BENCHMARK}" CPP_TESTS=True CAIRO=True FAST=True || cat config.log
  - if [[ "${DEBUG}" == True ]]; then export JOBS=$((JOBS/2)); fi;
  - make
