--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "visual-tests"]
 	path = visual-tests
 	url = https://github.com/mapnik/visual-tests.git
+[submodule "test-data"]
+	path = test-data
+	url = https://github.com/mapnik/test-data.git
